# military-phonetic-alphabet-bot

./: .gitignore  Cargo.toml  README.md  log4rs-config.yml
src/: commands.rs  main.rs  mappings.rs
