[package]
name = "military-phonetic-alphabet-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
lazy_static = "1.4.0"
log = "0.4.19"
log4rs = { version = "1.2.0", features = ["gzip"] }
poise = "0.5.5"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "signal"] }
